<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class Cuidador extends Model
{
    protected $fillable = [
        'nombre',
        'especialidad',
    ];

    public function cuidadoranimal()
    {
        return $this->hasOne(\App\Models\CuidadorAnimal);
    }
}
