<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateEspecieanimals extends Migration{
	public function up(){ 
 		Schema::create('especieanimals', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->integer('animal_id');
			$table->integer('especie_id');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}